--- a/index.html
+++ b/index.html
@@ -4,10 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- Compiled and minified CSS -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+     <link rel="stylesheet" href="stylesheets/style.css">
+     <!-- Compiled and minified JavaScript -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+             
     <title>Phase 1 Project</title>
 </head>
 <body>
-   
+    <nav class="blue darken-4">
+        <div class="nav-wrapper container">
+          <a href="#" class="brand-logo center">Stadium Visits</a>
+          <ul id="nav-mobile" class="left hide-on-med-and-down">
+            <li><a href="#" id="home-link">Home</a></li>
+            <li><a href="#" id="stadiums-link">Stadiums</a></li>
+            <li><a href="#" id="stadium-wish-list-link">Stadium Wish List</a></li>
+          </ul>
+        </div>
+      </nav>
+
+      <div class="container" id="main">
+
+        <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+
+        <!-- Modal Structure -->
+        <div id="modal1" class="modal">
+          <div class="modal-content">
+            <h4>Modal Header</h4>
+            <p>A bunch of text</p>
+          </div>
+          <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+          </div>
+        </div>
+      </div>
+
     <script src="index.js"></script>
 </body>
 </html>
