updated js and read me

--- a/index.html
+++ b/index.html
@@ -19,26 +19,12 @@
           <ul id="nav-mobile" class="left hide-on-med-and-down">
             <li><a href="#" id="home-link">Home</a></li>
             <li><a href="#" id="stadiums-link">Stadiums</a></li>
-            <li><a href="#" id="stadium-wish-list-link">Stadium Wish List</a></li>
+            <li><a href="#" id="stadium-wish-list-link">Stadium Wish List<span id="add-wishlist-number" class="new badge blue darken-4">0</span></a></li>
           </ul>
         </div>
       </nav>
 
-      <div class="container" id="main">
-
-        <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
-
-        <!-- Modal Structure -->
-        <div id="modal1" class="modal">
-          <div class="modal-content">
-            <h4>Modal Header</h4>
-            <p>A bunch of text</p>
-          </div>
-          <div class="modal-footer">
-            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
-          </div>
-        </div>
-      </div>
+      <div class="container" id="main"></div>
 
     <script src="index.js"></script>
 </body>
