--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         </div>
       </nav>
 
-      <div class="container" id="main"></div>
+      <div class="container" id="main">
+        
+      </div>
 
     <script src="index.js"></script>
 </body>
